src/test/ui/error-codes/E0075.stderr
error[E0075]: SIMD vector cannot be empty
  --> $DIR/E0075.rs:4:1
   |
LL | struct Bad;
   | ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0075`.
